# GlitchNodes

./: .gitignore  Corruptor.py  GlitchArtNode.py  Peaks.py  PixelFloat.py  README.md  VaporWave.py  VideoModulation.py  interferenceV2.py  pyproject.toml  requirements.txt
examples/: Glitch-Nodes.json
nodes/: Corruptor.py  DataBend.py  DitherMe.py  FrequencyModulation.py  GlitchIT.py  LineScreen.py  LuminousFlow.py  OrderedDithering.py  Pixel8Bit.py  PixelFloat.py  PixelRedistribution.py  Rekked.py  Scanz.py  TvGlitch.py  VHSonAcid.py  VaporWave.py  VideoModulation.py  __init__.py  ascii.py  dATAmOSH.py  interference.py
