[project]
name = "glitchnodes"
description = "GlitchNodes is a collection of image processing nodes designed for ComfyUI that specializes in creating glitch art and retro effects."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["numpy", "torch", "tqdm", "logging", "Pillow", "opencv-python"]

[project.urls]
Repository = "https://github.com/pxl-pshr/GlitchNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pxlpshr"
DisplayName = "GlitchNodes"
Icon = ""
