[project]
name = "glitchnodes"
description = "GlitchNodes is a collection of image processing nodes designed for ComfyUI that specializes in creating glitch art and retro effects."
version = "1.0.7"
license = {file = "LICENSE"}
dependencies = ["numpy", "torch", "Pillow", "opencv-python", "scipy"]

[project.urls]
Repository = "https://github.com/pxl-pshr/GlitchNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pxlpshr"
DisplayName = "GlitchNodes"
Icon = "https://camo.githubusercontent.com/726817b4baa17ac85ff3e1f18c991444658a275ab28c9e6fb944cdd7f0fd83e7/68747470733a2f2f692e706f7374696d672e63632f634a6d794e5434732f436f6d66792d55492d33343139342e706e67"
